feat: Player details, similarity search, and similarity details
